[tool.poetry]
name = "ApzivaProject1HappyCustomers"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.2"
plotly = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
